logs/mmfutils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/husl-4.0.3.egg-info'...
Listing './lib/python3.5/site-packages/mmfutils'...
Compiling './lib/python3.5/site-packages/mmfutils/debugging.py'...
***   File "./lib/python3.5/site-packages/mmfutils/debugging.py", line 139
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mmfutils/math'...
Listing './lib/python3.5/site-packages/mmfutils/math/bases'...
Listing './lib/python3.5/site-packages/mmfutils/math/integrate'...
Listing './lib/python3.5/site-packages/mmfutils/performance'...
Listing './lib/python3.5/site-packages/mmfutils/plot'...
Listing './lib/python3.5/site-packages/mmfutils/tests'...
Compiling './lib/python3.5/site-packages/mmfutils/tests/test_containers.py'...
***   File "./lib/python3.5/site-packages/mmfutils/tests/test_containers.py", line 137
    exec str(a) in d
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mmfutils-0.4.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
